{
  "version": 4,
  "terraform_version": "1.6.0",
  "serial": 20,
  "lineage": "0182bbc5-1fce-18ef-d343-1270b7cdfa01",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "ingress",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.38.107.21",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-12-23T11:29:09.839-08:00",
            "id": "projects/ip2-devops4-480317/regions/europe-west1/addresses/bordspel-ingress-ip-team8",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "bordspel-ingress-ip-team8",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "ip2-devops4-480317",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ip2-devops4-480317/regions/europe-west1/addresses/bordspel-ingress-ip-team8"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_https",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-23T11:29:31.594-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ip2-devops4-480317/global/firewalls/allow-http-https-team8",
            "log_config": [],
            "name": "allow-http-https-team8",
            "network": "https://www.googleapis.com/compute/v1/projects/ip2-devops4-480317/global/networks/bordspel-network-team8",
            "priority": 1000,
            "project": "ip2-devops4-480317",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ip2-devops4-480317/global/firewalls/allow-http-https-team8",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2025-12-23T11:29:31.456-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ip2-devops4-480317/global/firewalls/allow-internal-team8",
            "log_config": [],
            "name": "allow-internal-team8",
            "network": "https://www.googleapis.com/compute/v1/projects/ip2-devops4-480317/global/networks/bordspel-network-team8",
            "priority": 1000,
            "project": "ip2-devops4-480317",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ip2-devops4-480317/global/firewalls/allow-internal-team8",
            "source_ranges": [
              "10.0.0.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-12-23T11:29:31.350-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ip2-devops4-480317/global/firewalls/allow-ssh-team8",
            "log_config": [],
            "name": "allow-ssh-team8",
            "network": "https://www.googleapis.com/compute/v1/projects/ip2-devops4-480317/global/networks/bordspel-network-team8",
            "priority": 1000,
            "project": "ip2-devops4-480317",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ip2-devops4-480317/global/firewalls/allow-ssh-team8",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/ip2-devops4-480317/global/networks/bordspel-network-team8",
            "mtu": 0,
            "name": "bordspel-network-team8",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "9007904500046320490",
            "project": "ip2-devops4-480317",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ip2-devops4-480317/global/networks/bordspel-network-team8"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.opentofu.org/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-12-23T11:29:31.592-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/ip2-devops4-480317/regions/europe-west1/subnetworks/bordspel-subnet-team8",
            "ip_cidr_range": "10.0.0.0/20",
            "name": "bordspel-subnet-team8",
            "network": "https://www.googleapis.com/compute/v1/projects/ip2-devops4-480317/global/networks/bordspel-network-team8",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "ip2-devops4-480317",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.248.0.0/14",
                "range_name": "gke-bordspel-platform-team8-pods-41ab1ec8"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ip2-devops4-480317/regions/europe-west1/subnetworks/bordspel-subnet-team8",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}